--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <!-- VIBREATE로 알람 진동 추가 -->
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/main"
         android:label="Smishing Detection"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -26,22 +26,23 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"
+            android:exported="false"/>
 
         <receiver
-            android:name="service.SMSReceiverService">
+            android:name="Service_Utill.SMSReceiverService"
+            android:enabled="true">
             <intent-filter android:priority="999999">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
-        <!-- 브로드 캐스트 리시버-->
-
+        <!-- 브로드 캐스트 리시버는 exported = false 미적용, 적용 시, 외부 문자 입력을 파싱할 수없음-->
 
         <service
-            android:name="service.BackgroundService"
+            android:name="Service_Utill.BackgroundService"
             android:enabled="true"
             android:exported="false">
         </service> <!-- 백그라운드 -->
-
     </application>
+
 </manifest>
