--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <!-- VIBREATE로 알람 진동 추가 -->
 
+
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="false"
         android:icon="@drawable/main"
         android:label="Smishing Detection"
